--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
                         <p>Faculty Advisor</p>
                         <div class="social-handles">
                             <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
                             <i class="fa fa-linkedin-square"></i>
                         </div>
                     </div>
@@ -177,7 +176,6 @@
                         <p>Coding Mentor</p>
                         <div class="social-handles">
                             <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
                             <i class="fa fa-linkedin-square"></i>
                         </div>
                     </div>
@@ -207,9 +205,9 @@
                         <p>- Coding Club President &nbsp; &nbsp; at ITM University</p>
                         <p>-Website Developement</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                            <a href="https://github.com/vikassonigit" target="_blank"><i class="fa fa-github"></i></a>
+                            <a href="https://instagram.com/vikass_sonii" target="_blank"><i class="fa fa-instagram"></i></a>
+                             <a href = "http://linkedin.com/in/Vikas-D-Soni" target = "_blank"><i class="fa fa-linkedin-square"></i></a> 
                         </div>
                     </div>
                 </div>
@@ -219,9 +217,9 @@
                         <h1>Jaspreet Singh Kohli</h1>
                         <p>Website-Developement Team</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = "https://github.com/Jaspreetkohli72" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = "https://www.instagram.com/i_jaspreet_singh_kohli/" target = "_blank"><i class="fa fa-instagram"></i></a> 
+                             <a href = "https://www.linkedin.com/in/jaspreet-singh-k-b65b64118/" target = "_blank"><i class="fa fa-linkedin-square"></i></a> 
                         </div>
                     </div>
                 </div>
@@ -231,9 +229,9 @@
                         <h1>Jagriti Ranglani</h1>
                         <p>Website-Developement Team</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = "https://github.com/Jagriti-Ranglani" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = "https://www.instagram.com/ranglanijagriti" target = "_blank"> <i class="fa fa-instagram"></i> </a> 
+                             <a href = " https://www.linkedin.com/in/jagriti-ranglani-05605b183" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -243,9 +241,9 @@
                         <h1>Bhavjot Singh</h1>
                         <p>Website-Developement Team</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = " https://github.com/bhavi140201" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = " https://www.instagram.com/_bhavjot._/" target = "_blank"> <i class="fa fa-instagram"></i> </a> 
+                             <a href = " https://in.linkedin.com/in/bhavjot-singh" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -268,9 +266,8 @@
                         <h1>Riya Deshmukh</h1>
                         <p>CodeChef ITM Raipur Chapter president</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = " https://github.com/RiyaDeshmukh130299" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = "https://www.linkedin.com/in/riyadeshmukh1399" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -280,9 +277,9 @@
                         <h1>Ashraf Khan</h1>
                         <p>CodeChef ITM Raipur Chapter Programming Lead</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = " https://github.com/AshrafKhan-77" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = "https://www.instagram.com/ashraf_khan_77/" target = "_blank"> <i class="fa fa-instagram"></i> </a> 
+                             <a href = "https://www.linkedin.com/in/ashraf-khan-1987471b3" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -292,9 +289,9 @@
                         <h1>Gaurav Sangewar</h1>
                         <p> CodeChef ITM Raipur Chapter Events Coordinator</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = " https://github.com/techrider27" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = " https://www.instagram.com/its_gauravsangewar/" target = "_blank"> <i class="fa fa-instagram"></i> </a> 
+                             <a href = " https://www.linkedin.com/in/g-sangewar27/" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -304,9 +301,9 @@
                         <h1>Shruti Harwani</h1>
                         <p> CodeChef ITM Raipur Chapter Media and Outreach Lead</p>
                         <div class="social-handles">
-                            <i class="fa fa-github"></i>
-                            <i class="fa fa-instagram"></i>
-                            <i class="fa fa-linkedin-square"></i>
+                             <a href = "https://github.com/shrutiharwani" target = "_blank"><i class="fa fa-github"></i></a> 
+                             <a href = "https://www.instagram.com/shruti_harwani/" target = "_blank"> <i class="fa fa-instagram"></i> </a> 
+                             <a href = "https://www.linkedin.com/in/shruti-h-597218216" target = "_blank"> <i class="fa fa-linkedin-square"></i> </a> 
                         </div>
                     </div>
                 </div>
@@ -518,11 +515,11 @@
 
                     <span>Riya Deshmukh - B.Tech 7th sem (CodeChef Chapter President)</span>
 
+                    <span>Gaurav Sangewar - BCA 5th sem (CodeChef Chapter Events Lead)</span>
 
                     <span>Ashraf Khan - B.Tech 5th sem (CodeChef Chapter Programming Lead)</span>
 
 
-                    <span>Gaurav Sangewar - BCA 5th sem (CodeChef Chapter Events Lead)</span>
 
 
                     <span>Shruti Harwani - BCA 3rd sem (CodeChef Chapter Media & Outreach Lead)</span>
