--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
             <div class="p4-sub" data-aos="fade-left">
                 <div class="chapter-cards">
-                    <img src="img/Riya.jpg" alt="" />
+                    <img src="img/Riya.png" alt="" />
                     <div class="info">
                         <h1>Riya Deshmukh</h1>
                         <p>CodeChef ITM Raipur Chapter president</p>
